--- a/Trump/Base.lproj/Main.storyboard
+++ b/Trump/Base.lproj/Main.storyboard
@@ -1,25 +1,97 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8118" systemVersion="15A172" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BV1-FR-VrT">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="ldC-un-FLf">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8098"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Game View Controller-->
         <scene sceneID="tXr-a1-R10">
             <objects>
-                <viewController id="BV1-FR-VrT" customClass="GameViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BV1-FR-VrT" customClass="GameViewController" customModule="Trump" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="8aa-yV-Osq"/>
                         <viewControllerLayoutGuide type="bottom" id="qHh-Mt-9TT"/>
                     </layoutGuides>
                     <view key="view" multipleTouchEnabled="YES" contentMode="scaleToFill" id="3se-qz-xqx" customClass="SKView">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="0" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="0Cn-Wp-9U7">
+            <objects>
+                <viewController id="ldC-un-FLf" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="cbZ-2U-HsP"/>
+                        <viewControllerLayoutGuide type="bottom" id="IFS-LP-b5A"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="KyI-m1-Sbo">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="hackers-shut-down-donald-trump-election-campaign-website" translatesAutoresizingMaskIntoConstraints="NO" id="WqK-ff-Ckb">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D1w-Mu-k23">
+                                <rect key="frame" x="8" y="519" width="193" height="68"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="111" id="wm0-X7-hXe"/>
+                                </constraints>
+                                <attributedString key="attributedText">
+                                    <fragment content="Developed By: Hemank Narula">
+                                        <attributes>
+                                            <color key="NSColor" red="0.1394885927438736" green="1" blue="0.031639233231544495" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <font key="NSFont" size="14" name="HelveticaNeue"/>
+                                            <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZnG-tO-S0W">
+                                <rect key="frame" x="222" y="183" width="156" height="83"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="156" id="hSo-oW-Pv8"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="22"/>
+                                <state key="normal" title="Start">
+                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <segue destination="BV1-FR-VrT" kind="show" id="0w2-mx-9yV"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="D1w-Mu-k23" firstAttribute="top" secondItem="cbZ-2U-HsP" secondAttribute="bottom" constant="499" id="8cv-eZ-uPG"/>
+                            <constraint firstItem="IFS-LP-b5A" firstAttribute="top" secondItem="D1w-Mu-k23" secondAttribute="bottom" constant="13" id="A3r-cF-Qh3"/>
+                            <constraint firstItem="WqK-ff-Ckb" firstAttribute="bottom" secondItem="IFS-LP-b5A" secondAttribute="top" id="B4q-ou-oxi"/>
+                            <constraint firstItem="WqK-ff-Ckb" firstAttribute="top" secondItem="KyI-m1-Sbo" secondAttribute="top" id="TMh-rW-GXG"/>
+                            <constraint firstItem="IFS-LP-b5A" firstAttribute="top" secondItem="ZnG-tO-S0W" secondAttribute="bottom" constant="334" id="TXR-Xr-Xmx"/>
+                            <constraint firstItem="ZnG-tO-S0W" firstAttribute="centerX" secondItem="WqK-ff-Ckb" secondAttribute="centerX" id="aSt-8y-QmU"/>
+                            <constraint firstItem="ZnG-tO-S0W" firstAttribute="top" secondItem="cbZ-2U-HsP" secondAttribute="bottom" constant="163" id="ijg-4c-pYx"/>
+                            <constraint firstItem="D1w-Mu-k23" firstAttribute="leading" secondItem="KyI-m1-Sbo" secondAttribute="leadingMargin" constant="-12" id="j0f-Ao-MDO"/>
+                            <constraint firstItem="WqK-ff-Ckb" firstAttribute="leading" secondItem="KyI-m1-Sbo" secondAttribute="leading" id="jYy-3w-T9U"/>
+                            <constraint firstAttribute="trailing" secondItem="WqK-ff-Ckb" secondAttribute="trailing" id="od5-dH-qp0"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LgR-p8-Nty" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-460" y="310"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="hackers-shut-down-donald-trump-election-campaign-website" width="760" height="460"/>
+    </resources>
 </document>
